[package]
name = "funnibitmapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md5 = "0.7.0"
osu-db = "0.3.0"
osu-file-parser = "1.1.0"
rust_decimal = "1.34.3"

[profile.release]
debug-assertions = false
overflow-checks = false
incremental = false
strip = "symbols"
# panic = 'abort'
opt-level = 3
debug = false
lto = true

